change: se agrego redireccionamiente en el logo

--- a/HTML/Taqueria/index.html
+++ b/HTML/Taqueria/index.html
@@ -7,7 +7,7 @@
     <title>TacoNauta | Home</title>
 </head>
 <body>
-    <img src="assets/img/TacoNauta_preview.png" alt="Astronauta">
+<a href="index.html"><img src="assets/img/TacoNauta_preview.png" alt="Astronauta"></a>
     <h1>Bienvenidos TacoNautas</h1>
 
     <h2>Menu</h2>
@@ -88,6 +88,7 @@
         <dd>XX Lighter ............................................ $35</dd>
         <dd>Sol Clamato ......................................... $35</dd>
     <hr>
+    <h2>Hacer un pedido</h2>
     <a href="ordenar.html">Ordenar Ahora!</a>
 </body>
 </html>
