--- a/HTML/Taqueria/ordenar.html
+++ b/HTML/Taqueria/ordenar.html
@@ -7,6 +7,12 @@
     <title>TacoNauta | Pedidos</title>
 </head>
 <body>
+    <a href="index.html"><img src="assets/img/TacoNauta_preview.png" alt="Taconauta Logo"></a>
     <h1>Pedidos</h1>
+    <hr>
+    <form action="">
+        <label for="nombre">Nombre:</label>
+        <input type="text" id="nombre">
+    </form>
 </body>
 </html>
