add: Decoraciones para los pasteles

--- a/HTML/Pasteleria/index.html
+++ b/HTML/Pasteleria/index.html
@@ -9,8 +9,29 @@
 </head>
 <body>
 <img src="Assets/Images/Balbuena.jpg" alt="Cake Nation">
-<img src="Assets/Images/Balbuena.gif" alt="Cake Nation">
 <h1>Cake Nation</h1>
+
+<h1>Bienvenidos!</h1>
+<hr>
+<!--  Listado de sabores y  decoraciones   -->
+<h2>Sabores</h2>
+<ul>
+    <li>Chocolate ....................................  $160</li>
+    <li>Fresa ............................................ $145</li>
+    <li>Vainilla ......................................... $155</li>
+    <li>Natural ......................................... $130</li>
+</ul>
+
+<h2>Decoraciones</h2>
+<ul>
+    <li>Colorante natural </li>
+    <li>Velas Personalizadas</li>
+    <li>Letrero personalizado</li>
+    <li>Figuras  plasticas</li>
+    <li>Figuras comestibles</li>
+    <li>Adornos acrilicos</li>
+    <li>Fondan</li>
+</ul>
 
 </body>
 </html>
