add: Combinador de sabores

--- a/HTML/Pasteleria/index.html
+++ b/HTML/Pasteleria/index.html
@@ -20,6 +20,8 @@
     <li>Fresa ............................................ $145</li>
     <li>Vainilla ......................................... $155</li>
     <li>Natural ......................................... $130</li>
+    <li>3 Leches ....................................... $210</li>
+    <li>Frutas ............................................$180</li>
 </ul>
 
 <h2>Decoraciones</h2>
@@ -32,6 +34,25 @@
     <li>Adornos acrilicos</li>
     <li>Fondan</li>
 </ul>
+
+<!--    Selector de sabores y/o combinaciones-->
+<label for="flavor-mi">Sabor(es)</label>
+<select name="flavor" id="mi-fñavor">
+    <option value="">Chocolate</option>
+    <option value="">Fresa</option>
+    <option value="">Vanilla</option>
+    <option value="">3 Leches</option>
+    <option value="">Frutas</option>
+</select>
+
+<select name="flavor" id="mi-fñavor">
+    <option value="">Chocolate</option>
+    <option value="">Fresa</option>
+    <option value="">Vanilla</option>
+    <option value="">3 Leches</option>
+    <option value="">Frutas</option>
+</select>
+
 
 </body>
 </html>
