--- a/HTML/Pasteleria/index.html
+++ b/HTML/Pasteleria/index.html
@@ -29,9 +29,9 @@
     <li>Colorante natural </li>
     <li>Velas Personalizadas</li>
     <li>Letrero personalizado</li>
-    <li>Figuras  plasticas</li>
+    <li>Figuras  plásticas</li>
     <li>Figuras comestibles</li>
-    <li>Adornos acrilicos</li>
+    <li>Adornos acrílicos</li>
     <li>Fondan</li>
 </ul>
 
@@ -43,7 +43,7 @@
     <label for="phone">Telefono:</label>
     <input type="text" name="phone" id="phone">
     <br>
-    <label for="email">Correo Electronico:</label>
+    <label for="email">Correo Electrónico:</label>
     <input type="email" name="email" id="email">
     <br>
     <label for="description">Descripcion del pedido:</label>
