--- a/HTML/Pasteleria/index.html
+++ b/HTML/Pasteleria/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cake Nation</title>
+    <title>Pastelería Balbuena | Home</title>
     <link rel="icon" href="Assets/Icons/Balbuena.ico">
 </head>
 <body>
 <img src="Assets/Images/Balbuena.jpg" alt="Cake Nation">
-<h1>Cake Nation</h1>
-
-<h1>Bienvenidos!</h1>
+<h1>Pastelería Balbuena Bienvenidos!</h1>
 <hr>
 <!--  Listado de sabores y  decoraciones   -->
 <h2>Sabores</h2>
