add: navbar y cambios de separacion del contenido

--- a/HTML/Pasteleria/index.html
+++ b/HTML/Pasteleria/index.html
@@ -6,43 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pastelería Balbuena | Home</title>
     <link rel="icon" href="Assets/Icons/Balbuena.ico">
+    <link rel="stylesheet" href="Assets/CSS/main.css">
 </head>
 <body>
-<img src="Assets/Images/Balbuena.jpg" alt="Cake Nation">
-<h1>Pastelería Balbuena Bienvenidos!</h1>
-<hr>
+<!-- Barra de navegación -->
+<nav class="nav-bar">
+    <a href="index.html"><img src="Assets/Images/Balbuena.jpg" alt="Pastelería Balbuena" class="logo"></a>
+    <a href="index.html">Home</a>
+    <a href="#">Admin</a>
+</nav>
+<!-- Saludo -->
+<img class="layer" src="Assets/Images/layer-img.jpg" alt="Pastel Balbuena">
+<h1 id="welcome">Pastelería Balbuena Bienvenidos!</h1>
+<hr class="separator">
+
 <!--  Listado de sabores y  decoraciones   -->
-<h2>Sabores</h2>
-<ul>
-    <li>Chocolate ....................................  $160</li>
-    <li>Fresa ............................................ $145</li>
-    <li>Vainilla ......................................... $155</li>
-    <li>Natural ......................................... $130</li>
-    <li>3 Leches ....................................... $210</li>
-    <li>Frutas ............................................$180</li>
-</ul>
+<div class="flavors">
+    <h2>Sabores</h2>
+    <ul>
+        <li>Chocolate ....................................  $160</li>
+        <li>Fresa ............................................ $145</li>
+        <li>Vainilla ......................................... $155</li>
+        <li>Natural ......................................... $130</li>
+        <li>3 Leches ....................................... $210</li>
+        <li>Frutas ............................................$180</li>
+    </ul>
+</div>
 
-<h2>Decoraciones</h2>
-<ul>
-    <li>Colorante natural </li>
-    <li>Velas Personalizadas</li>
-    <li>Letrero personalizado</li>
-    <li>Figuras  plásticas</li>
-    <li>Figuras comestibles</li>
-    <li>Adornos acrílicos</li>
-    <li>Fondan</li>
-</ul>
+<div class="decorations">
+    <h2>Decoraciones</h2>
+    <ul>
+        <li>Colorante natural </li>
+        <li>Velas Personalizadas</li>
+        <li>Letrero personalizado</li>
+        <li>Figuras  plásticas</li>
+        <li>Figuras comestibles</li>
+        <li>Adornos acrílicos</li>
+        <li>Fondan</li>
+    </ul>
+</div>
 
-<!--   Pedidos -->
+<!--   Formulario de Pedidos -->
 <form >
     <label for="name">Nombre:</label>
     <input type="text" id="name" name="name">
+    <label for="lastname">Apellidos:</label>
+    <input type="text" id="lastname" name="lastname">
     <br>
     <label for="phone">Telefono:</label>
     <input type="text" name="phone" id="phone">
     <br>
     <label for="email">Correo Electrónico:</label>
     <input type="email" name="email" id="email">
+    <br>
     <br>
     <label for="description">Descripcion del pedido:</label>
     <textarea name="description" id="description" cols="15" rows="10"></textarea>
@@ -63,6 +79,8 @@
         <option value="3 Leches">3 Leches</option>
         <option value="Frutas">Frutas</option>
     </select>
+    <br>
+    <Button type="submit">Enviar</Button>
 </form>
 
 
