changes: cambio a medidar relativas

--- a/HTML/Pasteleria/index.html
+++ b/HTML/Pasteleria/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-MX">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,12 +24,12 @@
     <div class="flavors">
         <h2>Sabores</h2>
         <ul>
-            <li>Chocolate ....................................  $160</li>
-            <li>Fresa ............................................ $145</li>
-            <li>Vainilla ......................................... $155</li>
-            <li>Natural ......................................... $130</li>
-            <li>3 Leches ....................................... $210</li>
-            <li>Frutas ............................................$180</li>
+            <li>Chocolate ..........................  $160</li>
+            <li>Fresa .............................. $145</li>
+            <li>Vainilla ........................... $155</li>
+            <li>Natural ............................ $130</li>
+            <li>3 Leches ........................... $210</li>
+            <li>Frutas ............................. $180</li>
         </ul>
     </div>
 
