add: admin link

--- a/HTML/Pasteleria/index.html
+++ b/HTML/Pasteleria/index.html
@@ -11,9 +11,9 @@
 <body>
     <!-- Barra de navegación -->
     <nav class="nav-bar">
-        <a href="index.html"><img src="Assets/Images/Balbuena.jpg" alt="Pastelería Balbuena" class="logo"></a>
+        <a href="index.html"><img src="Assets/Images/Balbuena-no-bg.png" alt="Pastelería Balbuena" class="logo"></a>
         <a href="index.html">Home</a>
-        <a href="#">Admin</a>
+        <a href="admin.html">Admin</a>
     </nav>
     <!-- Saludo -->
     <img class="layer" src="Assets/Images/layer-img.jpg" alt="Pastel Balbuena">
