--- a/HTML/Pasteleria/index.html
+++ b/HTML/Pasteleria/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pastelería Balbuena | Home</title>
     <link rel="icon" href="Assets/Icons/Balbuena.ico">
-    <link rel="stylesheet" href="Assets/CSS/main.css">
+    <link rel="stylesheet" href="CSS/main.css">
 </head>
 <body>
     <!-- Barra de navegación -->
     <nav class="nav-bar">
         <div class="column-2">
             <div class="logo">
-                <a href="index.html"><img src="Assets/Images/Balbuena-no-bg.png" alt="Pastelería Balbuena"></a>
+                <a href="index.html"><img src="Images/Balbuena-no-bg.png" alt="Pastelería Balbuena"></a>
             </div>
             <div class="links">
                 <a href="index.html">Home</a>
@@ -23,17 +23,17 @@
     </nav>
 
     <!-- Saludo -->
-    <img class="layer" src="Assets/Images/layer-img.jpg" alt="Pastel Balbuena">
+    <img class="layer" src="Images/layer-img.jpg" alt="Pastel Balbuena">
     <h1 id="welcome">Pastelería Balbuena Bienvenidos!</h1>
     <hr class="separator">
 
     <!--  Listado de sabores y  decoraciones   -->
-    <div class="column-2">
+    <div class="column-2" id="menu">
         <div class="flavors">
             <h3>Sabores</h3>
             <ul>
-                <li>Chocolate ..........................  $160</li>
-                <li>Fresa .............................. $145</li>
+            <li>Chocolate ..........................  $160</li>
+            <li>Fresa .............................. $145</li>
             <li>Vainilla ........................... $155</li>
             <li>Natural ............................ $130</li>
             <li>3 Leches ........................... $210</li>
