change: sabores de chocolate

--- a/HTML/Pasteleria/index.html
+++ b/HTML/Pasteleria/index.html
@@ -32,8 +32,8 @@
         <div class="flavors">
             <h3>Sabores</h3>
             <ul>
-            <li>Chocolate ..........................  $160</li>
-            <li>Fresa .............................. $145</li>
+            <li>Chocolate Amargo ...................  $160</li>
+            <li>Chocolate Blanco ...................  $170</li>
             <li>Vainilla ........................... $155</li>
             <li>Natural ............................ $130</li>
             <li>3 Leches ........................... $210</li>
