add: navbar y lista de ingredientes para inventario

--- a/HTML/Pasteleria/admin.html
+++ b/HTML/Pasteleria/admin.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/main.css">
     <title>Admin View </title>
 </head>
 <body>
+    <!-- Barra de navegación -->
+    <nav class="nav-bar">
+        <div class="column-2">
+            <div class="logo">
+                <a href="index.html"><img src="Images/Balbuena-no-bg.png" alt="Pastelería Balbuena"></a>
+            </div>
+            <div class="links">
+                <a href="index.html">Home</a>
+                <a href="admin.html">Admin</a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Inventarios de Materiales-->
+    <div class="inventario">
+        <div class="ingredients">
+            <ul>
+                <li>Chocolate Amargo </li>
+                <li>Chocolate Blanco</li>
+                <li>Esencia de Vainilla</li>
+                <li>Media Crema</li>
+                <li>Azúcar</li>
+                <li>Harina de Trigo</li>
+                <li>Aceite de Oliva</li>
+                <li>Leche</li>
+                <li>Huevo</li>
+                <li>Polvo para hornear</li>
+                <li>Sal</li>
+            </ul>
+        </div>
+
+    </div>
 
 </body>
 </html>
