add: visualizacion de inventario de sabores y materiales

--- a/HTML/Pasteleria/index.html
+++ b/HTML/Pasteleria/index.html
@@ -38,6 +38,9 @@
             <li>Natural ............................ $130</li>
             <li>3 Leches ........................... $210</li>
             <li>Frutas ............................. $180</li>
+            <li>Red Velvert ........................ $280</li>
+            <li>CHeese Cake ........................ $220</li>
+            <li>De Nieve ........................... $160</li>
         </ul>
     </div>
 
@@ -51,6 +54,9 @@
             <li>Figuras comestibles ........................ $120</li>
             <li>Adornos acrílicos .......................... $65</li>
             <li>Fondan ..................................... $70</li>
+            <li>De Bodas ................................... $350</li>
+            <li>Despedidas ................................. $450</li>
+            <li>Baby Shower ................................ $250</li>
         </ul>
     </div>
 </div>
