changes: se agregaron divs y modificacion de posicicones

--- a/HTML/Pasteleria/index.html
+++ b/HTML/Pasteleria/index.html
@@ -23,9 +23,10 @@
     </nav>
 
     <!-- Saludo -->
-    <img class="layer" src="Images/layer-img.jpg" alt="Pastel Balbuena">
-    <h1 id="welcome">Pastelería Balbuena Bienvenidos!</h1>
-    <hr class="separator">
+    <div class="container">
+        <img src="Images/layer-img.jpg">
+        <div class="slogan">Pastelería Balbuena Bienvenidos!</div>
+    </div>
 
     <!--  Listado de sabores y  decoraciones   -->
     <div class="column-2" id="menu">
