--- a/HTML/Pasteleria/index.html
+++ b/HTML/Pasteleria/index.html
@@ -1,102 +1,31 @@
 <!DOCTYPE html>
 <html lang="es-MX">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pastelería Balbuena | Home</title>
-    <link rel="icon" href="Assets/Icons/Balbuena.ico">
-    <link rel="stylesheet" href="CSS/main.css">
-</head>
-<body>
-    <!-- Barra de navegación -->
-    <nav class="nav-bar">
-        <div class="column-2">
-            <div class="logo">
-                <a href="index.html"><img src="Images/Balbuena-no-bg.png" alt="Pastelería Balbuena"></a>
-            </div>
-            <div class="links">
-                <a href="index.html">Home</a>
-                <a href="admin.html">Admin</a>
-            </div>
-        </div>
+  <head>
+    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link rel="stylesheet" href="CSS/main.css" />
+    <link rel="stylesheet" href="CSS/grid.css" />
+  </head>
+  <body>
+    <nav class="navbar container col-2">
+      <div>
+        <a>
+          <img
+            class="logo"
+            src="Images/Balbuena-no-bg.png"
+            width="100"
+            height="100"
+          />
+        </a>
+      </div>
+      <div>
+        <a href="#" class="navlink">Balbuena</a>
+        <a href="#" class="navlink">Home</a>
+      </div>
     </nav>
-
-    <!-- Saludo -->
-    <div class="container">
-        <img src="Images/layer-img.jpg">
-        <div class="slogan">Pastelería Balbuena Bienvenidos!</div>
-    </div>
-
-    <!--  Listado de sabores y  decoraciones   -->
-    <div class="column-2" id="menu">
-        <div class="flavors">
-            <h3>Sabores</h3>
-            <ul>
-            <li>Chocolate Amargo ...................  $160</li>
-            <li>Chocolate Blanco ...................  $170</li>
-            <li>Vainilla ........................... $155</li>
-            <li>Natural ............................ $130</li>
-            <li>3 Leches ........................... $210</li>
-            <li>Frutas ............................. $180</li>
-            <li>Red Velvert ........................ $280</li>
-            <li>CHeese Cake ........................ $220</li>
-            <li>De Nieve ........................... $160</li>
-        </ul>
-    </div>
-
-    <div class="decorations">
-        <h3>Decoraciones</h3>
-        <ul>
-            <li>Colorante natural .......................... $50 </li>
-            <li>Velas Personalizadas ....................... $100</li>
-            <li>Letrero personalizado ...................... $75</li>
-            <li>Figuras  plásticas .......................... $60</li>
-            <li>Figuras comestibles ........................ $120</li>
-            <li>Adornos acrílicos .......................... $65</li>
-            <li>Fondan ..................................... $70</li>
-            <li>De Bodas ................................... $350</li>
-            <li>Despedidas ................................. $450</li>
-            <li>Baby Shower ................................ $250</li>
-        </ul>
-    </div>
-</div>
-
-    <!--   Formulario de Pedidos -->
-    <form class="formulario">
-        <label for="name">Nombre:</label>
-        <input type="text" id="name" name="name">
-        <label for="lastname">Apellidos:</label>
-        <input type="text" id="lastname" name="lastname">
-        <br>
-        <label for="phone">Telefono:</label>
-        <input type="text" name="phone" id="phone">
-        <br>
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" name="email" id="email">
-        <br>
-        <br>
-        <label for="description">Descripcion del pedido:</label>
-        <textarea name="description" id="description" cols="15" rows="10"></textarea>
-        <br>
-        <label for="flavors">Sabores</label>
-        <select name=flavor id="flavor">
-            <option value="Chocolate">Chocolate</option>
-            <option value="Vainilla">Vainilla</option>
-            <option value="Fresa">Fresa</option>
-            <option value="3 Leches">3 Leches</option>
-            <option value="Frutas">Frutas</option>
-        </select>
-        <label for="mix">Combinar con:</label>
-        <select name="flavor-2" id="flavor-2">
-            <option value="Chocolate">Chocolate</option>
-            <option value="Vainilla">Vainilla</option>
-            <option value="Fresa">Fresa</option>
-            <option value="3 Leches">3 Leches</option>
-            <option value="Frutas">Frutas</option>
-        </select>
-        <br>
-        <Button type="submit">Enviar</Button>
-    </form>
-</body>
+  </body>
 </html>
