--- a/HTML/Pasteleria/index.html
+++ b/HTML/Pasteleria/index.html
@@ -1,31 +1,57 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es-MX">
-  <head>
-    <title>Title</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link rel="stylesheet" href="CSS/main.css" />
-    <link rel="stylesheet" href="CSS/grid.css" />
-  </head>
-  <body>
-    <nav class="navbar container col-2">
-      <div>
-        <a>
-          <img
-            class="logo"
-            src="Images/Balbuena-no-bg.png"
-            width="100"
-            height="100"
-          />
-        </a>
-      </div>
-      <div>
-        <a href="#" class="navlink">Balbuena</a>
-        <a href="#" class="navlink">Home</a>
-      </div>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!-- Bootstrap CSS v5.0.2 -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="./CSS/main.css">
+        <!-- FontAwesome 5.15. CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="shortcut icon" href="./Images/cake.png" type="image/x-icon">
+        <title>Balbuena Pastelería | Home</title>
+    </head>
+<body>
+    <!-- Barra de Navegación -->
+    <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-navbar">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">
+                <img src="./Images/Balbuena-no-bg.png" class="logo"><span class="mark">Pastelería Balbuena</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span><img src="./Images/cake.png"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pedidos</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
-  </body>
+
+    <div class="container text-box">
+        <div class="row">
+                <div class="col-12 col-md-12 col-lg-6">
+                    <img src="./Images/layer-img.jpg" class="rounded-img" height="100%" width="100%">
+                </div>
+                <div class="col-12 col-md-12 col-lg-6">
+                    <h1>Pastelerías Balbuena</h1>
+                    <p>En pastelerías Balbuena siempre ofrecemos productos con el mas alto estándar de calidad y para facilitar el acceso a nuestros clientes ponemos a su disposición la creación de pasteles a petición por el cliente, comienza ahora.</p>
+                    <button type="button" class="btn btn-dark">Personalizar</button>
+                </div>
+        </div>
+    </div>
+
+
+    <!-- Bootstrap JavaScript Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <!-- (Optional) Use CSS or JS implementation -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+</body>
 </html>
