--- a/HTML/Pasteleria/index.html
+++ b/HTML/Pasteleria/index.html
@@ -21,29 +21,109 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span><img src="./Images/cake.png"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
+                <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pedidos</a>
+                        <a class="nav-link" href="pedidos.html">Pedidos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pedidos.html">Sing Up</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div class="container text-box">
-        <div class="row">
+    <div class="container text-box rounded-img">
+        <div class="row justify-content-center">
                 <div class="col-12 col-md-12 col-lg-6">
                     <img src="./Images/layer-img.jpg" class="rounded-img" height="100%" width="100%">
                 </div>
                 <div class="col-12 col-md-12 col-lg-6">
                     <h1>Pastelerías Balbuena</h1>
                     <p>En pastelerías Balbuena siempre ofrecemos productos con el mas alto estándar de calidad y para facilitar el acceso a nuestros clientes ponemos a su disposición la creación de pasteles a petición por el cliente, comienza ahora.</p>
-                    <button type="button" class="btn btn-dark">Personalizar</button>
+                    <a href="./pedidos.html" class="btn btn-pastel m-5 d-flex justify-content-center">Personalizar</a>
                 </div>
+        </div>
+    </div>
+
+    <!-- Cards para los tipos de pasteles -->
+    <div class="container card-box">
+        <div class="row row-cols-3 row-cols-sm-2 row-cols-md-2 d-flex justify-content-center">
+            <!-- Pasteles de Boda -->
+            <div class="card m-1 p-2" style="width:22rem;">
+                <img src="./Images/boda.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Pasteles de Boda</h5>
+                    <p class="card-text">En pastelerías Balbuena sabemos lo importante de esta ocasion por eso mismo te ofrecemos pasteles de boda con los mejores ingredientes y decoraciones personalizadas para que ese momento sea inolvidable.</p>
+                </div>
+            </div>
+            <!-- Pasteles 3 Leches -->
+            <div class="card m-1 p-2" style="width:22rem;">
+                <img src="./Images/3leches.jpg" class="card-img-top" alt="..." height="230">
+                <div class="card-body">
+                    <h5 class="card-title">3 Leches</h5>
+                    <p class="card-text">Nuestros pasteles de 3 leches elaborados con maestría por nuestros chef's repostero pasteleros serán el furor en el evento con su sabor inigualable.</p>
+                </div>
+            </div>
+            <!-- Pasteles para Cumpleaños -->
+            <div class="card m-1 p-2" style="width:22rem;">
+                <img src="./Images/bd-cake.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Cumpleaños</h5>
+                    <p class="card-text">Nuestros pasteles para tu celebración cuentan con la personalización deseada para tu fiesta.</p>
+                </div>
+            </div>
+            <!-- Baby shower -->
+            <div class="card m-1 p-2" style="width:22rem;">
+                <img src="./Images/baby.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Baby Showers</h5>
+                    <p class="card-text">Nada causa mas felicidad que la integración de un nuevo miembro en la familia, y como no acompañarlo con uno de nuestros pasteles para hacer aun mas memorable ese momento.</p>
+                </div>
+            </div>
+            <!-- Despedidas de solteros -->
+            <div class="card m-1 p-2" style="width:22rem;">
+                <img src="./Images/despedida.jpg" class="card-img-top" alt="..." height="240">
+                <div class="card-body">
+                    <h5 class="card-title">Despedidas de Solteras(os)</h5>
+                    <p class="card-text">Toda buena fiesta cuenta con un pastel por lo que tu despedida de soltera no puede ser la excepción nuestros pasteles son totalmente personalizados y al gusto.</p>
+                </div>
+            </div>
+            <!-- Fiestas infantiles -->
+            <div class="card m-1 p-2" style="width:22rem;">
+                <img src="./Images/infantil.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Infantiles</h5>
+                    <p class="card-text">Para los peques tenemos nuestros pasteles con los mejores sabores y ademas de que contamos con los diseños de sus personajes favoritos para que su celebración sea inolvidable.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid foot p-4">
+        <div class="container d-flex flex-lg-row flex-md-row flex-sm-column flex-xs-column  justify-content-around">
+            <div>
+                <i class="fa fa-map" aria-hidden="true"></i> Dirección
+                <p>
+                    Blv. Cream S/N <br>
+                    Cream & Cookies CP.12032
+                </p>
+            </div>
+            <div>
+                <i class="fa fa-phone-square" aria-hidden="true"></i> Telefonos
+                <p>Fondant (+32)234-234-2242</p>
+                <p>Fondant (+32)234-234-2242</p>
+                <p>Fondant (+32)234-234-2242</p>
+            </div>
+            <div>
+                <i class="fa fa-clock" aria-hidden="true"></i> Horarios
+                <p>Lunes a Viernes 11:00 a 17:00</p>
+                <p>Sabado a domingo 11:00 a 14:00</p>
+            </div>
         </div>
     </div>
 
