add: cards de los pasteles

--- a/HTML/Pasteleria/index.html
+++ b/HTML/Pasteleria/index.html
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="pedidos.html">Pedidos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pedidos.html">Sing Up</a>
+                        <a class="nav-link" href="dashboard.html">Sing Up</a>
                     </li>
                 </ul>
             </div>
