--- a/HTML/Pasteleria/pedidos.html
+++ b/HTML/Pasteleria/pedidos.html
@@ -24,13 +24,13 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="pedidos.html">Pedidos</a>
+                        <a class="nav-link active" href="./pedidos.html">Pedidos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pedidos.html">Sing Up</a>
+                        <a class="nav-link" href="./dashboard.html">Sing Up</a>
                     </li>
                 </ul>
             </div>
