--- a/Pasteleria/dashboard.html
+++ b/Pasteleria/dashboard.html
@@ -16,7 +16,7 @@
 
 <body>
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="./index.html"><img src="./Images/cake.png"> Balbuena Pastelerías</a>
+        <a class="navbar-brand col-md-3 col-lg-3 mr-0 px-3" href="./index.html"><img src="./Images/cake.png"> Balbuena Pastelerías</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -42,104 +42,47 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">
                             <span data-feather="file"></span>
-                            Orders
+                            Ingredientes
                             </a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="shopping-cart"></span>
-                            Products
-                        </a>
+                          <a class="nav-link" href="#">
+                              <span data-feather="shopping-cart"></span>
+                              Adornos
+                          </a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="users"></span>
-                            Customers
-                        </a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="bar-chart-2"></span>
-                            Reports
-                        </a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="layers"></span>
-                            Integrations
-                        </a>
+                          <a class="nav-link" href="#">
+                              <span data-feather="users"></span>
+                              Pedidos
+                          </a>
                         </li>
                     </ul>
-
-          <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-            <span>Saved reports</span>
-            <a class="link-secondary" href="#" aria-label="Add a new report">
-              <span data-feather="plus-circle"></span>
-            </a>
-          </h6>
-          <ul class="nav flex-column mb-2">
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                Current month
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                Last quarter
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                Social engagement
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                Year-end sale
-              </a>
-            </li>
-          </ul>
         </div>
       </nav>
 
       <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
         <div
           class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-          <h1 class="h2">Dashboard</h1>
-          <div class="btn-toolbar mb-2 mb-md-0">
-            <div class="btn-group mr-2">
-              <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-              <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
-            </div>
-            <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-              <span data-feather="calendar"></span>
-              This week
-            </button>
-          </div>
+          <h1 class="h2">Inventarios</h1>
+
         </div>
-
-        <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
-
-        <h2>Section title</h2>
+        <h2>Ingredientes</h2>
         <div class="table-responsive">
           <table class="table table-striped table-sm">
             <thead>
               <tr>
-                <th>#</th>
-                <th>Header</th>
-                <th>Header</th>
-                <th>Header</th>
-                <th>Header</th>
+                <th>#Code</th>
+                <th>Nombre</th>
+                <th>Qty en Sistema</th>
+                <th>Qty Física</th>
+                <th>Diferencia</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>1,001</td>
-                <td>Lorem</td>
+                <td>Harina de Trigo</td>
                 <td>ipsum</td>
                 <td>dolor</td>
                 <td>sit</td>
