--- a/Vacunaciones/index.html
+++ b/Vacunaciones/index.html
@@ -4,39 +4,100 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
     <!-- Hojas de estilo -->
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="./CSS/grid.css">
-
     <title>Vaticcine | Home</title>
 </head>
 <body>
     <!-- Barra de navegación -->
-    <nav>
-        <div>
-            <div>
-                <span><a href="#">Vaticcine</a></span>
-            </div>
-            <ul>
-                <li>
-                    <a href="#">Database</a>
-                </li>
-                <li>
-                    <a href="#">Education</a>
-                </li>
-                <li>
-                    <a href="#">News</a>
-                </li>
-                <li>
-                    <a href="#">Regulation</a>
-                </li>
-                <li>
-                    <a href="#">Hoax Buster</a>
-                </li>
-            </ul>
-
-        </div>
+    <nav class="navbar">
+        <!-- Logo o marca -->
+        <span class="brand-name"><a href="./index.html">Vaccination</a></span>
+        <!-- menu de navegación -->
+        <ul class="nav-menu">
+            <li class="nav-item">
+                <a href="#" class="nav-link">Database</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Education</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">News</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Regulation</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Hoax Buster</a>
+            </li>
+        </ul>
     </nav>
 
+    <main class="container-main">
+        <div class="box1"></div>
+        <div class="box2"></div>
+        <div class="info-content">
+            <h1>Fight Virus With Vaccines</h1>
+            <p>Let's stop this pandemic by killing the virus with a vaccine, don't let yourself and your family get infected</p>
+        </div>
+        <div class="services">
+            <span class="bg-icon">
+                <i class="fa-solid fa-shield-blank"></i>
+                <label>Best Protection</label>
+            </span>
+            <span class="bg-icon">
+                <i class="fa-solid fa-star"></i>
+                <label>Selected Vaccines</label>
+            </span>
+        </div>
+        <div class="title">
+            <span><i class="fa-solid fa-clock"></i></span>
+            <label>Schedule your vaccinations</label>
+        </div>
+        <!-- Form para la cita de vacunacion -->
+        <div class="form-vaccination">
+            <div>
+                <span><i class="fa-solid fa-location-dot"></i></span>
+                <label for="">Location</label>
+                <br>
+                <select class="box-data" name="Location" id="Location">
+                    <option>Tijuana, BC</option>
+                    <option>Tecate, BC</option>
+                    <option>Mexicali, BC</option>
+                    <option>Ensenada, BC</option>
+                    <option>Rosarito, BC</option>
+                </select>
+            </div>
+            <div>
+                <span><i class="fa-regular fa-calendar-days"></i></span>
+                <label for="date">Date</label>
+                <br>
+                <input class="box-data" type="date" id="date" name="date-start" value="2022-03-11" min="2022-01-01" max="2055-12-31">
+            </div>
+            <div>
+                <span><i class="fa-solid fa-pen"></i></span>
+                <label for="">Vaccine Type</label>
+                <br>
+                <select class="box-data" name="Location" id="Location">
+                    <option value="Moderna">Moderna</option>
+                    <option value="Astra Zeneca">Astra Zeneca</option>
+                    <option value="SinoVac">SinoVac</option>
+                    <option value="Pfizer">Pfizer</option>
+                </select>
+            </div>
+            <div>
+                <button class="btn" type="submit">Submit</button>
+            </div>
+        </div>
+        <div class="land-img">
+            <img src="./Images/injection.png" alt="vaccinations">
+        </div>
+    </main>
+
+    <!-- Scripts Js FontAwesome -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
 </body>
 </html>
