add: seccion de los logos

--- a/Vacunaciones/index.html
+++ b/Vacunaciones/index.html
@@ -45,11 +45,11 @@
         </div>
         <div class="services">
             <span class="bg-icon">
-                <i class="fa-solid fa-shield-blank"></i>
+                <i class="fa-solid fa-shield-blank gold-icon"></i>
                 <label>Best Protection</label>
             </span>
             <span class="bg-icon">
-                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star gold-icon"></i>
                 <label>Selected Vaccines</label>
             </span>
         </div>
@@ -96,6 +96,15 @@
             <img src="./Images/injection.png" alt="vaccinations">
         </div>
     </main>
+    <!-- Logos vacunas -->
+    <div class="logos">
+        <ul class="log-container">
+            <li class="log"><img src="./Images/aztra.png" alt=""></li>
+            <li class="log"><img src="./Images/Sinovac.png" alt=""></li>
+            <li class="log"><img src="./Images/Pfizer.png" alt=""></li>
+            <li class="log"><img src="./Images/moderna.png" alt=""></li>
+        </ul>
+    </div>
 
     <!-- Scripts Js FontAwesome -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
