add: clases para los iconos y area de cards

--- a/Vacunaciones/index.html
+++ b/Vacunaciones/index.html
@@ -37,8 +37,8 @@
     </nav>
 
     <main class="container-main">
-        <div class="box1"></div>
-        <div class="box2"></div>
+        <div class="box1 box"></div>
+        <div class="box2 box"></div>
         <div class="info-content">
             <h1>Fight Virus With Vaccines</h1>
             <p>Let's stop this pandemic by killing the virus with a vaccine, don't let yourself and your family get infected</p>
@@ -54,13 +54,13 @@
             </span>
         </div>
         <div class="title">
-            <span><i class="fa-solid fa-clock"></i></span>
+            <span><i class="fa-solid fa-clock blueicon-sm"></i></span>
             <label>Schedule your vaccinations</label>
         </div>
         <!-- Form para la cita de vacunacion -->
         <div class="form-vaccination">
             <div>
-                <span><i class="fa-solid fa-location-dot"></i></span>
+                <span><i class="fa-solid fa-location-dot blueicon-sm"></i></span>
                 <label for="">Location</label>
                 <br>
                 <select class="box-data" name="Location" id="Location">
@@ -72,13 +72,13 @@
                 </select>
             </div>
             <div>
-                <span><i class="fa-regular fa-calendar-days"></i></span>
+                <span><i class="fa-regular fa-calendar-days blueicon-sm"></i></span>
                 <label for="date">Date</label>
                 <br>
                 <input class="box-data" type="date" id="date" name="date-start" value="2022-03-11" min="2022-01-01" max="2055-12-31">
             </div>
             <div>
-                <span><i class="fa-solid fa-pen"></i></span>
+                <span><i class="fa-solid fa-pen blueicon-sm"></i></span>
                 <label for="">Vaccine Type</label>
                 <br>
                 <select class="box-data" name="Location" id="Location">
@@ -105,6 +105,36 @@
             <li class="log"><img src="./Images/moderna.png" alt=""></li>
         </ul>
     </div>
+    <!-- por que deberías vacunarte -->
+    <div class="box box-3"></div>
+    <div class="container reasons">
+            <h2>Why should I vaccine?</h2>
+            <p>In order to avoid any doubts about getting the COVID-19 vaccine, identify th e following 4 benefits of COVID-19 vaccination:</p>
+    </div>
+    <div class="container cards">
+            <div class="center">
+                <div class="card">
+                    <span><i class="fa-solid fa-sliders blueicon-md"></i></span>
+                    <h4>Minimize the spread of viruses</h4>
+                    <p>Vaccine has been proven effective to prevent someone from getting infected with Coronavirus</p>
+                </div>
+                <div class="card">
+                    <span><i class="fa-solid fa-shield-blank blueicon-md"></i></span>
+                    <h4>Forming antibodies</h4>
+                    <p>COVID-19 vaccine proven to help shape antibody response for immune system</p>
+                </div>
+                <div class="card">
+                    <span><i class="fa-solid fa-users blueicon-md"></i></span>
+                    <h4>Protecting people nearby</h4>
+                    <p>The benefits of COVID-19 vaccination are the vaccine tha we get also help protect people around us</p>
+                </div>
+                <div class="card">
+                    <span><i class="fa-solid fa-chart-line blueicon-md"></i></span>
+                    <h4>Creating group immunity</h4>
+                    <p>COVID-19 vaccination is also beneficial for creating group immunity or herd immunity</p>
+                </div>
+            </div>
+        </div>
 
     <!-- Scripts Js FontAwesome -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
