add: area de contacto

--- a/Vacunaciones/index.html
+++ b/Vacunaciones/index.html
@@ -139,16 +139,101 @@
             </div>
         </div>
         <!-- Info accordion -->
-        <div class="container">
+        <div class="grid-12">
             <div class="girl">
-                <img src="./Images/girl.png" alt="">
+                <div class="blue-box"></div>
+                <img src="./Images/girl.png">
             </div>
-            <div>
+            <div class="info">
                 <h2>Preparations Before Vaccine</h2>
                 <p>the success of vaccines is strongly influenced by the strength of the body's immune system.Therefore, there are several things that can be tired to make the COVID-19 vaccine work:</p>
             </div>
+            <!-- accordion -->
+            <div class="accordion grid-2">
+                <div class="item-box">
+                    <div class="acord-title">
+                        <span><i class="fa-solid fa-shield-blank blueicon-sm"></i></span>
+                        <h4>Avoid alcoholic beverages</h4>
+                    </div>
+                    <div class="content">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, pariatur! Perspiciatis, totam minus quae tempora velit impedit, modi amet asperiores</p>
+                    </div>
+                </div>
+                <div class="item-box">
+                    <div class="acord-title">
+                        <span><i class="fa-solid fa-shield-blank blueicon-sm"></i></span>
+                        <h4>Avoid alcoholic beverages</h4>
+                    </div>
+                    <div class="content">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, pariatur! Perspiciatis, totam minus quae tempora velit impedit, modi amet asperiores</p>
+                    </div>
+                </div>
+                <div class="item-box">
+                    <div class="acord-title">
+                        <span><i class="fa-solid fa-shield-blank blueicon-sm"></i></span>
+                        <h4>Avoid alcoholic beverages</h4>
+                    </div>
+                    <div class="content">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, pariatur! Perspiciatis, totam minus quae tempora velit impedit, modi amet asperiores</p>
+                    </div>
+                </div>
+                <div class="item-box">
+                    <div class="acord-title">
+                        <span><i class="fa-solid fa-shield-blank blueicon-sm"></i></span>
+                        <h4>Avoid alcoholic beverages</h4>
+                    </div>
+                    <div class="content">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, pariatur! Perspiciatis, totam minus quae tempora velit impedit, modi amet asperiores</p>
+                    </div>
+                </div>
+                <div class="item-box">
+                    <div class="acord-title">
+                        <span><i class="fa-solid fa-shield-blank blueicon-sm"></i></span>
+                        <h4>Avoid alcoholic beverages</h4>
+                    </div>
+                    <div class="content">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, pariatur! Perspiciatis, totam minus quae tempora velit impedit, modi amet asperiores</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
+        <!-- Contacto -->
+        <div class="container emergency">
+            <h2>Emergency Contact</h2>
+            <p>Contact one of the contact below if you or you family feel unwell and have similar symptoms such as Covid-19, make sure you also take care of yourself before reporting to us:</p>
+            <div class="box box-4"></div>
+        </div>
+        <div class="contacto">
+            <div class="contact-box call">
+                <span><i class="fa-solid fa-phone-volume blueicon-lg"></i></span>
+                <h4>Call</h4>
+                <p>021.123.145.14</p>
+                <button class="btn-light">Call Now</button>
+            </div>
+            <div class="contact-box chat">
+                <span><i class="fa-solid fa-comment-dots blueicon-lg"></i></span>
+                <h4>Chat</h4>
+                <p>021.123.145.14</p>
+                <button class="btn-light">Call Now</button>
+            </div>
+            <div class="contact-box video-call">
+                <span><i class="fa-solid fa-video blueicon-lg"></i></span>
+                <h4>Video Call</h4>
+                <p>021.123.145.14</p>
+                <button class="btn-light">Call Now</button>
+            </div>
+            <div class="contact-box mail">
+                <span><i class="fa-solid fa-envelope blueicon-lg"></i></span>
+                <h4>Message</h4>
+                <p>021.123.145.14</p>
+                <button class="btn-light">Call Now</button>
+            </div>
+            <div class="guy">
+                <div class="bg-img"></div>
+                <img src="./Images/boy.png">
+            </div>
+        </div>
     <!-- Scripts Js FontAwesome -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
 </body>
