typo: cambio de texto en botones de contacto

--- a/Vacunaciones/index.html
+++ b/Vacunaciones/index.html
@@ -215,19 +215,19 @@
                 <span><i class="fa-solid fa-comment-dots blueicon-lg"></i></span>
                 <h4>Chat</h4>
                 <p>021.123.145.14</p>
-                <button class="btn-light">Call Now</button>
+                <button class="btn-light">Chat Now</button>
             </div>
             <div class="contact-box video-call">
                 <span><i class="fa-solid fa-video blueicon-lg"></i></span>
                 <h4>Video Call</h4>
                 <p>021.123.145.14</p>
-                <button class="btn-light">Call Now</button>
+                <button class="btn-light">Video Call Now</button>
             </div>
             <div class="contact-box mail">
                 <span><i class="fa-solid fa-envelope blueicon-lg"></i></span>
                 <h4>Message</h4>
                 <p>021.123.145.14</p>
-                <button class="btn-light">Call Now</button>
+                <button class="btn-light">Message Now</button>
             </div>
             <div class="guy">
                 <div class="bg-img"></div>
